--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <title>TravelAgency - Welcome Page!</title>
     </head>
     <body>
-        
-        
+        <header class="header" id="main-header">
+            Some text...
+        </header>
+
     </body>
 </html>
