--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     </head>
     <body>
         <header class="header" id="main-header">
-            Some text...
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="logo">
+            </div>
+            
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">Outdoors</span>
+                    <span class="heading-primary-sub"> is where life begins</span>
+                </h1>
+            </div>
         </header>
-
     </body>
 </html>
