--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
 
             <div class="text-box">
-                <h1 class="heading-primary">
-                    <span class="heading-primary-main">Outdoors</span>
-                    <span class="heading-primary-sub"> is where life happens</span>
+                <h1 class="heading-primary animation-cluster">
+                    <span class="heading-primary-main animation-in-left">Outdoors</span>
+                    <span class="heading-primary-sub animation-in-right"> is where life happens</span>
                 </h1>
             </div>
         </header>
