animate header buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <span class="heading-primary-main animation-in-left">Outdoors</span>
                     <span class="heading-primary-sub animation-in-right"> is where life happens</span>
                 </h1>
+                
+                <a href="#" class="btn btn-animated btn-white">Discover out offer</a>
             </div>
         </header>
     </body>
