--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     </head>
     <body>
         <header class="header" id="main-header">
-            <div class="logo-box">
-                <img src="img/logo-white.png" alt="Logo" class="logo">
+            <div class="header__logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="header__logo">
             </div>
 
-            <div class="text-box">
+            <div class="header__text-box">
                 <h1 class="heading-primary animation-cluster">
-                    <span class="heading-primary-main animation-in-left">Outdoors</span>
-                    <span class="heading-primary-sub animation-in-right"> is where life happens</span>
+                    <span class="heading-primary--main animation-in-left">Outdoors</span>
+                    <span class="heading-primary--sub animation-in-right"> is where life happens</span>
                 </h1>
                 
-                <a href="#" class="btn btn-animated btn-white">Discover out offer</a>
+                <a href="#" class="btn btn--animated btn--white">Discover out offer</a>
             </div>
         </header>
     </body>
